# asl_flight2

./: .gitignore  CMakeLists.txt  README.md  asl_gazebo.world  package.xml
.github/: ros2.repos
.github/workflows/: foxy.yml  humble.yml  rolling.yml
include/asl_flight2/: controller_base.h  controller_base.hpp  joy_def.hpp  mocap_relay.hpp  ps4_def.hpp  simple_controller.h
include/asl_flight2/joy_defs/: shield_def.hpp
launch/: example_figure8.launch.py  example_takeoff.launch.py  hardware_base.launch.py  hardware_rc.launch.py  mocap_vrpn.launch.py  mocap_vrpn.py  ps4_rc.launch.py  px4_agent.launch.py  rviz.launch.py  sim_base.launch.py  sim_rc.launch.py  sim_rc.py  sim_rc_launch.py
rviz/: default.rviz
src/: controller_base.cpp  controller_base.hpp  mocap_relay.cpp  mocap_relay_sim.cpp  rc_controller.cpp  simple_controller.cpp  takeoff_example.cpp  test_command.cpp
src/control/: controller_base.cpp  controller_ps4.cpp
src/examples/: figure8.cpp  offboard_control.cpp  takeoff.cpp
src/mocap/: mocap_relay.cpp  mocap_relay.hpp  mocap_relay_sim.cpp  mocap_relay_vrpn.cpp
